--- a/templates/session.html
+++ b/templates/session.html
@@ -148,6 +148,26 @@
                     currentSessionTable.prepend(item);
                     // remove song from songs table
                     $(self).remove();
+
+                    if (currentSessionTable.children().length >= 5) {
+                      // Show the recommended songs table
+                      // $('.recommended-songs-table').show();
+                      // Make an AJAX request to fetch recommended songs
+                      $.ajax({
+                        url: '/get_recommended_songs',
+                        type: 'GET',
+                        success: function(response) {
+                          // Populate the recommended songs table with the response data
+                          var recommendedSongsTable = $('.recommended-songs-table tbody');
+                          recommendedSongsTable.empty(); // Clear the table body
+                          for (var i = 0; i < response.length; i++) {
+                            var song = response[i];
+                            var row = '<tr><td>' + song.title + '</td><td>' + song.artist + '</td></tr>';
+                            recommendedSongsTable.append(row);
+                          }
+                        }
+                      });
+                    }
                 }
             }
         });
