Separate JS file

--- a/templates/session.html
+++ b/templates/session.html
@@ -114,66 +114,14 @@
 
 
   </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script>
-      $(document).ready(function() {
-        // add click event listener to songs table rows
-        $('.songs-table tr').click(function() {
-          // get song data from clicked row
-          var title = $(this).find('td:nth-child(1)').text();
-          var artist = $(this).find('td:nth-child(2)').text();
-          var song_id = $(this).find('td:nth-child(3)').text();
-          var self = this; 
-          // var url = $(this).find('td:nth-child(3) a').attr('href');
-          // add song to current session
-          // var currentSessionTable = $('.current-session-table tbody');
-          // var item = '<tr><td>' + title + '</td><td>' + artist;
-          // currentSessionTable.append(item);
-          // // remove song from songs table
-          // $(this).remove();
-          var data = {
-            'title': title,
-            'artist': artist, 
-            'song_id': song_id
-        };
-        $.ajax({
-            type: "POST",
-            url: "/add_song_to_session",
-            data: JSON.stringify(data),
-            contentType: "application/json",
-            success: function(response) {
-                if (response.success) {
-                    var currentSessionTable = $('.current-session-table tbody');
-                    var item = '<tr><td>' + title + '</td><td>' + artist;
-                    currentSessionTable.prepend(item);
-                    // remove song from songs table
-                    $(self).remove();
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <!-- <script type="module" type="module">
+    import Logic from './Logic.js';
+    const logic = new Logic();
+  </script> -->
 
-                    if (currentSessionTable.children().length >= 5) {
-                      // Show the recommended songs table
-                      // $('.recommended-songs-table').show();
-                      // Make an AJAX request to fetch recommended songs
-                      $.ajax({
-                        url: '/get_recommended_songs',
-                        type: 'GET',
-                        success: function(response) {
-                          // Populate the recommended songs table with the response data
-                          var recommendedSongsTable = $('.recommended-songs-table tbody');
-                          recommendedSongsTable.empty(); // Clear the table body
-                          for (var i = 0; i < response.length; i++) {
-                            var song = response[i];
-                            var row = '<tr><td>' + song.title + '</td><td>' + song.artist + '</td></tr>';
-                            recommendedSongsTable.append(row);
-                          }
-                        }
-                      });
-                    }
-                }
-            }
-        });
-        });
-      });
-    </script>
+  <script type = "text/javascript" src="../static/Logic.js"></script>
 </head>
 <body>
   <div class="row">
@@ -229,9 +177,9 @@
         </thead>
         <tbody>
             {% for song in recommended_songs %}
-            <tr onclick="window.location.href='{{ song.url }}'">
-            <td>{{ song.title }}</td>
-            <td>{{ song.a_name }}</td>
+            <tr>
+              <td>{{ song.title }}</td>
+              <td>{{ song.a_name }}</td>
             </tr>
             {% endfor %}
         </tbody>
