--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>TuneInMind - Welcome Page</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="../static/assets/favicon.ico" />
     <!-- Bootstrap Icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Google fonts-->
@@ -15,7 +15,9 @@
     <!-- SimpleLightbox plugin CSS-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <!-- <link href="./css/styles.css" rel="stylesheet" /> -->
+    <link href="../static/styles.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton&effect=neon">
   </head>
   <body id="page-top">
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
@@ -37,26 +39,29 @@
       <div class="container px-4 px-lg-5 h-100">
           <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
               <div class="col-lg-8 align-self-end">
-                  <h1 class="text-white font-weight-bold">Your Moods, Our Music: The Exquisite Combination</h1>
+                  <h1 class="text-white font-weight-bold" style="font-family: 'Grand Hotel', cursive;">TuneInMind</h1>
+                  <h1 class="font-effect-neon" style="font-family: 'Grand Hotel', cursive;">TuneInMind</h1>
                   <hr class="divider" />
               </div>
               <div class="col-lg-8 align-self-baseline">
-                  <p class="text-white-75 mb-5">Discover your perfect soundtrack with our session-based music recommendation system that curates playlists to match your current mood!</p>
+                  <p class="text-white-75 mb-5"> <b>Your Moods, Our Music - The Exquisite Combination</b>  <br><br> Discover your perfect soundtrack with our session-based music recommendation system that curates playlists to match your current mood!</p>
                   <a class="btn btn-primary btn-xl" href="/session">Start Session</a>
               </div>
+              <div class="container px-4 px-lg-5"><div class="small text-center text-muted" style="color: black;">Copyright &copy; 2023 - TuneInMind</div></div>
           </div>
       </div>
+      
   </header>
   <!-- Footer-->
-  <footer class="bg-light py-5">
+  <!-- <footer class="bg-light py-5">
       <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyright &copy; 2023 - TuneInMind</div></div>
-  </footer>
+  </footer> -->
   <!-- Bootstrap core JS-->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- SimpleLightbox plugin JS-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.js"></script>
   <!-- Core theme JS-->
-  <script src="js/scripts.js"></script>
+  <script type = "text/javascript" src="../static/scripts.js"></script>
   <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
   <!-- * *                               SB Forms JS                               * *-->
   <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
