--- a/templates/session.html
+++ b/templates/session.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>My Music App</title>
+  <title>TuneInMind</title>
   <style>
     /* CSS styles for the layout */
     .row {
@@ -15,14 +15,17 @@
       height: 600px;
       width: 1600px;
     }
-
   
     body {
       overflow: hidden;
       max-width: 100%;
       margin: 0 auto;
+      background-image: url("../static/assets/img/music_wallpaper.jpg");
+    background-size: cover;
+    height: 100vh;
+    background-attachment: fixed;
+    background-size: 100% 100%;
     }
-
     .col {
       flex: 1;
       padding: 10px;
@@ -80,7 +83,6 @@
       transform: translateX(46px);
     }
 
-
     .recommended {
       position: fixed;
       bottom: 10px;
@@ -103,7 +105,7 @@
       background-color: #f5f5f5;
       cursor: pointer;
     }
-
+    
     .scrollable-div-right {
       padding-left: 20px;
       width: 45%;
@@ -133,11 +135,25 @@
     }
 
     .fixed-div-bottom-left {
-        height: 45%;
+        position: fixed;
+        left: 0;
+        bottom: 0;
+        height: 50%;
+        width: 40%;
         overflow-y: scroll;
+        margin-left: 10px;
     }
 
-    
+    .scrollable-div-right {
+        position: absolute;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        width: 50%;
+        overflow-y: scroll;
+        margin-right: 10px;
+    }
+
     .current-session-table {
       border-collapse: collapse;
       width: 100%;
@@ -173,7 +189,6 @@
     .current-session {
       margin-top: 20px;
     }
-
     .music-player {
       position: absolute;
       bottom: 0;
@@ -197,7 +212,6 @@
       background-size: cover;
     }
 
-
   </style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
     <link href="../static/fresh-bootstrap-table.css" rel="stylesheet" />
@@ -215,8 +229,6 @@
   <script type = "text/javascript" src="../static/Logic.js"></script>
 </head>
 <body>
-  
-
   <div class="row">
     <div class="fixed-div-top-left">
         <h2>Current Session</h2>
@@ -288,5 +300,42 @@
     </table>
     </div>
   </div>
+  <div class ='music-player'>
+    <span id="current-song">Song Title</span>
+    <span> ----By----</span>
+    <span id="artist-name">Song Artist</span>
+  <button class = "image-button"></button>
+</div>
+  <!-- <div class="scrollable-div-right">
+    <h2>Popular Songs</h2>
+    <div class = "popular-songs-div">
+      <table class = "songs-table">
+        <thead>
+          <tr> 
+            <th>Title</th>
+            <th>Artist</th>
+            <th style="display:none">Song_id</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for song in songs %}
+          <tr>
+            <td>{{ song.title }}</td>
+            <td>{{ song.artist }}</td>
+            <td style="display:none">{{ song.song_id }}</td>
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+
+    </div>
+    <!-- <ul>
+      {% for song in songs %}
+      <li><a>{{ song.f_name }} - {{ song.a_name }}</a></li>
+      {% endfor %}
+    </ul> -->
+    
+  </div> -->
+</div>
 </body>
 </html>
