--- a/templates/session.html
+++ b/templates/session.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>TuneInMind</title>
+  <title>My Music App</title>
   <style>
     /* CSS styles for the layout */
     .row {
@@ -15,17 +15,14 @@
       height: 600px;
       width: 1600px;
     }
+
   
     body {
       overflow: hidden;
       max-width: 100%;
       margin: 0 auto;
-      background-image: url("../static/assets/img/music_wallpaper.jpg");
-    background-size: cover;
-    height: 100vh;
-    background-attachment: fixed;
-    background-size: 100% 100%;
     }
+
     .col {
       flex: 1;
       padding: 10px;
@@ -83,6 +80,7 @@
       transform: translateX(46px);
     }
 
+
     .recommended {
       position: fixed;
       bottom: 10px;
@@ -105,7 +103,7 @@
       background-color: #f5f5f5;
       cursor: pointer;
     }
-    
+
     .scrollable-div-right {
       padding-left: 20px;
       width: 45%;
@@ -124,36 +122,16 @@
     }
 
     .fixed-div-top-left {
-        position: fixed;
-        left: 0;
-        top: 0;
-        height: 50%;
-        width: 40%;
-        margin-left: 10px;
-        overflow: auto;
-        overflow-block: auto;
+        height: 45%;
+        overflow-y: scroll;
     }
 
     .fixed-div-bottom-left {
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        height: 50%;
-        width: 40%;
+        height: 45%;
         overflow-y: scroll;
-        margin-left: 10px;
     }
 
-    .scrollable-div-right {
-        position: absolute;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        width: 50%;
-        overflow-y: scroll;
-        margin-right: 10px;
-    }
-
+    
     .current-session-table {
       border-collapse: collapse;
       width: 100%;
@@ -189,6 +167,7 @@
     .current-session {
       margin-top: 20px;
     }
+
     .music-player {
       position: absolute;
       bottom: 0;
@@ -212,13 +191,8 @@
       background-size: cover;
     }
 
+
   </style>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-    <link href="../static/fresh-bootstrap-table.css" rel="stylesheet" />
-    <link href="../static/demo.css" rel="stylesheet" />
-  
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,700,300" rel="stylesheet" type="text/css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <!-- <script type="module" type="module">
@@ -229,113 +203,86 @@
   <script type = "text/javascript" src="../static/Logic.js"></script>
 </head>
 <body>
+  
+
   <div class="row">
-    <div class="fixed-div-top-left">
-        <h2>Current Session</h2>
-        <div class="fresh-table full-color-orange">
-          <!-- <table class="current-session-table"> -->
-            <table id="fresh-table" class="current-session-table" >
+    <div class = "left-side-tables">
+      <h2>Current Session</h2>
+      <div class="fixed-div-top-left">
+        <table class="current-session-table">
+          <thead>
+            <tr>
+              <th>Title</th>
+              <th>Artist</th>
+            </tr>
+          </thead>
+          <tbody>
+           
+          </tbody>
+        </table>
+      </div>
+      <h2>Recommended Songs</h2>
+      <div class="fixed-div-bottom-left">
+        <table class = "recommended-songs-table">
             <thead>
-              <tr>
-                <th data-field="name">Title</th>
-                <th data-field="country">Artist</th>
-              </tr>
+                <tr> 
+                <th>Title</th>
+                <th>Artist</th>
+                <th style="display:none">Song_id</th>
+                </tr>
             </thead>
             <tbody>
-             
+                {% for song in recommended_songs %}
+                <tr>
+                <td>{{ song.title }}</td>
+                <td>{{ song.artist }}</td>
+                <td style="display:none">{{ song.song_id }}</td>
+                </tr>
+                {% endfor %}
             </tbody>
-          </table>
-        </div>
+        </table>
       </div>
+    </div>
+
+    <div class ='music-player'>
+      <span id="current-song">Song Title</span>
+      <span> ----By----</span>
+      <span id="artist-name">Song Artist</span>
+    <button class = "image-button"></button>
+  </div>
     <div class="scrollable-div-right">
       <h2>Popular Songs</h2>
+      <div class = "popular-songs-div">
+        <table class = "songs-table">
+          <thead>
+            <tr> 
+              <th>Title</th>
+              <th>Artist</th>
+              <th style="display:none">Song_id</th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for song in songs %}
+            <tr>
+              <td>{{ song.title }}</td>
+              <td>{{ song.artist }}</td>
+              <td style="display:none">{{ song.song_id }}</td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
+
+      </div>
       <!-- <ul>
         {% for song in songs %}
         <li><a>{{ song.f_name }} - {{ song.a_name }}</a></li>
         {% endfor %}
       </ul> -->
       
-      <div class="fresh-table full-color-azure">
-      <table class = "songs-table">
-        <thead>
-          <tr> 
-            <th>Title</th>
-            <th>Artist</th>
-            <th style="display:none">Song_id</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for song in songs %}
-          <tr>
-            <td>{{ song.title }}</td>
-            <td>{{ song.artist }}</td>
-            <td style="display:none">{{ song.song_id }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      </div>
     </div>
   </div>
-  <div class="fixed-div-bottom-left">
-    <h2>Recommended Songs</h2>
-    <div class="fresh-table full-color-red">
-    <table class = "recommended-songs-table">
-        <thead>
-            <tr> 
-            <th>Title</th>
-            <th>Artist</th>
-            <th style="display:none">Song_id</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for song in recommended_songs %}
-            <tr>
-            <td>{{ song.title }}</td>
-            <td>{{ song.artist }}</td>
-            <td style="display:none">{{ song.song_id }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    </div>
-  </div>
-  <div class ='music-player'>
-    <span id="current-song">Song Title</span>
-    <span> ----By----</span>
-    <span id="artist-name">Song Artist</span>
-  <button class = "image-button"></button>
-</div>
-  <!-- <div class="scrollable-div-right">
-    <h2>Popular Songs</h2>
-    <div class = "popular-songs-div">
-      <table class = "songs-table">
-        <thead>
-          <tr> 
-            <th>Title</th>
-            <th>Artist</th>
-            <th style="display:none">Song_id</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for song in songs %}
-          <tr>
-            <td>{{ song.title }}</td>
-            <td>{{ song.artist }}</td>
-            <td style="display:none">{{ song.song_id }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
 
-    </div>
-    <!-- <ul>
-      {% for song in songs %}
-      <li><a>{{ song.f_name }} - {{ song.a_name }}</a></li>
-      {% endfor %}
-    </ul> -->
-    
-  </div> -->
-</div>
+  
+  
 </body>
 </html>
