--- a/templates/session.html
+++ b/templates/session.html
@@ -8,7 +8,7 @@
     .row {
       display: flex;
       flex-wrap: nowrap;
-      margin-top: 80px;
+      margin-top: 20px;
       margin-bottom: 70px;
       margin-right: 30px;
       margin-left: 30px;
@@ -39,6 +39,8 @@
     .toggle-wrapper {
       display: inline-block;
       position: relative;
+      left: 10px;
+      top: 10px;
       width: 80px;
       height: 34px;
     }
@@ -79,7 +81,6 @@
     .toggle-wrapper input:checked + label:before {
       transform: translateX(46px);
     }
-
 
     .recommended {
       position: fixed;
@@ -195,16 +196,18 @@
   </style>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>  
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <!-- <script type="module" type="module">
-    import Logic from './Logic.js';
-    const logic = new Logic();
-  </script> -->
-
   <script type = "text/javascript" src="../static/Logic.js"></script>
 </head>
 <body>
   
-
+  <div class= "top-options">
+    <h3>Want to use Lyrics?</h3>
+    <div class="toggle-wrapper">
+      <input type="checkbox" id="toggle" name="toggle" checked>
+      <label for="toggle"></label>
+    </div>
+  </div>
+  
   <div class="row">
     <div class = "left-side-tables">
       <h2>Current Session</h2>
@@ -243,13 +246,7 @@
         </table>
       </div>
     </div>
-
-    <div class ='music-player'>
-      <span id="current-song">Song Title</span>
-      <span> ----By----</span>
-      <span id="artist-name">Song Artist</span>
-    <button class = "image-button"></button>
-  </div>
+    
     <div class="scrollable-div-right">
       <h2>Popular Songs</h2>
       <div class = "popular-songs-div">
@@ -273,16 +270,15 @@
         </table>
 
       </div>
-      <!-- <ul>
-        {% for song in songs %}
-        <li><a>{{ song.f_name }} - {{ song.a_name }}</a></li>
-        {% endfor %}
-      </ul> -->
-      
     </div>
   </div>
 
-  
-  
+  <div class ='music-player'>
+    <span id="current-song">Song Title</span>
+    <span> ----By----</span>
+    <span id="artist-name">Song Artist</span>
+    <button class = "image-button"></button>
+  </div>
+
 </body>
 </html>
