--- a/static/styles.css
+++ b/static/styles.css
@@ -10929,7 +10929,8 @@ hr.divider-light {
 header.masthead {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 4.5rem);
-  background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../static/assets/img/bg-masthead.jpg");
+  background: url("../static/assets/img/music_wallpaper.jpg");
+  /* background: linear-gradient(to bottom, rgba(92, 77, 66, 0.8) 0%, rgba(92, 77, 66, 0.8) 100%), url("../static/assets/img/music_wallpaper.jpg"); */
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
