Added Evaluation and Analysis

--- a/templates/session.html
+++ b/templates/session.html
@@ -7,9 +7,10 @@
     /* CSS styles for the layout */
 
     body {
-      background-image: url("../static/assets/img/plain_bg.jpg");
+      /* background-image: url("../static/assets/img/plain_bg.jpg"); */
       background-size: cover;
       color: white;
+      background-color: #0f3c60;
     }   
 
 
